# telecommunications-and-signal-processing

./: .gitignore  README.md  main.cpp
zad1/interface_zad1/: output.txt  pom.xml
zad1/interface_zad1/src/main/java/: module-info.java
zad1/interface_zad1/src/main/java/com/example/telekomuna/: HelloApplication.java  HelloController.java  oneBit.java  twoBit.java
zad1/interface_zad1/src/main/resources/com/example/telekomuna/: hello-view.fxml
zad1/tele_zad1_jv/src/: Main.java  oneBit.java  twoBit.java
zad1/ver1/: CMakeLists.txt  main.cpp
zad2/r-s/: output  reciver.cpp  sender.cpp
zad2/rs232/: xmodem.cpp
zad3/: CMakeLists.txt  client.cpp  client.h  fileIO.cpp  fileIO.h  huffReceiver.cpp  huffReceiver.h  huffSender.cpp  huffSender.h  huffman.cpp  huffman.h  main.cpp  server.cpp  server.h  typedefs.h
zad4/: CMakeLists.txt  audio.py  client.py  gui.py  main.py  receiver.py  requirements.txt  sender.py  server.py
